// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-fieldset render Should render with args { disabled: true }: 1`] = `
<mg-fieldset>
  <template shadowrootmode="open">
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--label-on-top" role="group">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <span class="mg-c-input__input-group">
        <slot></slot>
      </span>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          legend
        </legend>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-input-radio>
    <template shadowrootmode="open">
      <mg-input aria-labelledby="mg-input-radio-title" class="mg-c-input mg-c-input--disabled mg-c-input--fieldset mg-c-input--radio" role="group">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <ul class="mg-c-input__input-group-container" role="list">
          <li class="mg-c-input__input-group mg-c-input__input-group--disabled">
            <input disabled="" id="mg-input-radio_0" name="mg-input-radio" type="radio" value="0">
            <label htmlfor="mg-input-radio_0">
              batman
            </label>
          </li>
          <li class="mg-c-input__input-group mg-c-input__input-group--disabled">
            <input disabled="" id="mg-input-radio_1" name="mg-input-radio" type="radio" value="1">
            <label htmlfor="mg-input-radio_1">
              robin
            </label>
          </li>
          <li class="mg-c-input__input-group mg-c-input__input-group--disabled">
            <input disabled="" id="mg-input-radio_2" name="mg-input-radio" type="radio" value="2">
            <label htmlfor="mg-input-radio_2">
              joker
            </label>
          </li>
          <li class="mg-c-input__input-group mg-c-input__input-group--disabled">
            <input disabled="" id="mg-input-radio_3" name="mg-input-radio" type="radio" value="3">
            <label htmlfor="mg-input-radio_3">
              bane
            </label>
          </li>
        </ul>
        <mg-input-title identifier="mg-input-radio" is-legend="true" readonly="false" required="false" slot="label">
          <!---->
          <legend class="mg-c-input-title" id="mg-input-radio-title">
            mg-input-radio label
          </legend>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-radio>
  <mg-input-text>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--disabled mg-c-input--display-character-left mg-c-input--text mg-c-input--width-full">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <div class="mg-c-input__input-group-container" style="--mg-c-character-left-message-length: 7;">
          <input aria-describedby="mg-input-text-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" disabled="" id="mg-input-text" maxlength="400" name="mg-input-text" type="text">
          <mg-character-left identifier="mg-input-text-character-left" maxlength="400"></mg-character-left>
        </div>
        <slot name="append-input"></slot>
        <mg-input-title identifier="mg-input-text" is-legend="false" readonly="false" required="false" slot="label">
          <!---->
          <label class="mg-c-input-title" htmlfor="mg-input-text">
            mg-input-text label
          </label>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-text>
</mg-fieldset>
`;

exports[`mg-fieldset render Should render with args { errorMessage: 'This is an error' }: 1`] = `
<mg-fieldset errormessage="This is an error">
  <template shadowrootmode="open">
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--label-on-top" role="group">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <span class="mg-c-input__input-group">
        <slot></slot>
      </span>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          legend
        </legend>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-input-radio>
    <template shadowrootmode="open">
      <mg-input aria-labelledby="mg-input-radio-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <ul class="mg-c-input__input-group-container" role="list">
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_0" name="mg-input-radio" type="radio" value="0">
            <label htmlfor="mg-input-radio_0">
              batman
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_1" name="mg-input-radio" type="radio" value="1">
            <label htmlfor="mg-input-radio_1">
              robin
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_2" name="mg-input-radio" type="radio" value="2">
            <label htmlfor="mg-input-radio_2">
              joker
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_3" name="mg-input-radio" type="radio" value="3">
            <label htmlfor="mg-input-radio_3">
              bane
            </label>
          </li>
        </ul>
        <mg-input-title identifier="mg-input-radio" is-legend="true" readonly="false" required="false" slot="label">
          <!---->
          <legend class="mg-c-input-title" id="mg-input-radio-title">
            mg-input-radio label
          </legend>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-radio>
  <mg-input-text>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--display-character-left mg-c-input--text mg-c-input--width-full">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <div class="mg-c-input__input-group-container" style="--mg-c-character-left-message-length: 7;">
          <input aria-describedby="mg-input-text-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="mg-input-text" maxlength="400" name="mg-input-text" type="text">
          <mg-character-left identifier="mg-input-text-character-left" maxlength="400"></mg-character-left>
        </div>
        <slot name="append-input"></slot>
        <mg-input-title identifier="mg-input-text" is-legend="false" readonly="false" required="false" slot="label">
          <!---->
          <label class="mg-c-input-title" htmlfor="mg-input-text">
            mg-input-text label
          </label>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-text>
</mg-fieldset>
`;

exports[`mg-fieldset render Should render with args { helpText: 'Hello joker' }: 1`] = `
<mg-fieldset>
  <template shadowrootmode="open">
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--label-on-top" role="group">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </template>
      <span class="mg-c-input__input-group">
        <slot></slot>
      </span>
      <div id="identifier-help-text" slot="help-text">
        Hello joker
      </div>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend aria-describedby="identifier-help-text" class="mg-c-input-title" id="identifier-title">
          legend
        </legend>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-input-radio>
    <template shadowrootmode="open">
      <mg-input aria-labelledby="mg-input-radio-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <ul class="mg-c-input__input-group-container" role="list">
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_0" name="mg-input-radio" type="radio" value="0">
            <label htmlfor="mg-input-radio_0">
              batman
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_1" name="mg-input-radio" type="radio" value="1">
            <label htmlfor="mg-input-radio_1">
              robin
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_2" name="mg-input-radio" type="radio" value="2">
            <label htmlfor="mg-input-radio_2">
              joker
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_3" name="mg-input-radio" type="radio" value="3">
            <label htmlfor="mg-input-radio_3">
              bane
            </label>
          </li>
        </ul>
        <mg-input-title identifier="mg-input-radio" is-legend="true" readonly="false" required="false" slot="label">
          <!---->
          <legend class="mg-c-input-title" id="mg-input-radio-title">
            mg-input-radio label
          </legend>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-radio>
  <mg-input-text>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--display-character-left mg-c-input--text mg-c-input--width-full">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <div class="mg-c-input__input-group-container" style="--mg-c-character-left-message-length: 7;">
          <input aria-describedby="mg-input-text-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="mg-input-text" maxlength="400" name="mg-input-text" type="text">
          <mg-character-left identifier="mg-input-text-character-left" maxlength="400"></mg-character-left>
        </div>
        <slot name="append-input"></slot>
        <mg-input-title identifier="mg-input-text" is-legend="false" readonly="false" required="false" slot="label">
          <!---->
          <label class="mg-c-input-title" htmlfor="mg-input-text">
            mg-input-text label
          </label>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-text>
</mg-fieldset>
`;

exports[`mg-fieldset render Should render with args { legendHeading: 'h1' }: 1`] = `
<mg-fieldset>
  <template shadowrootmode="open">
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-heading mg-c-input--inputs-on-bottom mg-c-input--label-on-top" role="group">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <span class="mg-c-input__input-group">
        <slot></slot>
      </span>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <h1 class="mg-c-input-title__text">
            legend
          </h1>
        </legend>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-input-radio>
    <template shadowrootmode="open">
      <mg-input aria-labelledby="mg-input-radio-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <ul class="mg-c-input__input-group-container" role="list">
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_0" name="mg-input-radio" type="radio" value="0">
            <label htmlfor="mg-input-radio_0">
              batman
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_1" name="mg-input-radio" type="radio" value="1">
            <label htmlfor="mg-input-radio_1">
              robin
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_2" name="mg-input-radio" type="radio" value="2">
            <label htmlfor="mg-input-radio_2">
              joker
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_3" name="mg-input-radio" type="radio" value="3">
            <label htmlfor="mg-input-radio_3">
              bane
            </label>
          </li>
        </ul>
        <mg-input-title identifier="mg-input-radio" is-legend="true" readonly="false" required="false" slot="label">
          <!---->
          <legend class="mg-c-input-title" id="mg-input-radio-title">
            mg-input-radio label
          </legend>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-radio>
  <mg-input-text>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--display-character-left mg-c-input--text mg-c-input--width-full">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <div class="mg-c-input__input-group-container" style="--mg-c-character-left-message-length: 7;">
          <input aria-describedby="mg-input-text-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="mg-input-text" maxlength="400" name="mg-input-text" type="text">
          <mg-character-left identifier="mg-input-text-character-left" maxlength="400"></mg-character-left>
        </div>
        <slot name="append-input"></slot>
        <mg-input-title identifier="mg-input-text" is-legend="false" readonly="false" required="false" slot="label">
          <!---->
          <label class="mg-c-input-title" htmlfor="mg-input-text">
            mg-input-text label
          </label>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-text>
</mg-fieldset>
`;

exports[`mg-fieldset render Should render with args { legendHeading: 'h1', legendBorderDisplay: true }: 1`] = `
<mg-fieldset>
  <template shadowrootmode="open">
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-heading mg-c-input--inputs-on-bottom mg-c-input--label-border-display mg-c-input--label-on-top" role="group">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <span class="mg-c-input__input-group">
        <slot></slot>
      </span>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <h1 class="mg-c-input-title__text">
            legend
          </h1>
        </legend>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-input-radio>
    <template shadowrootmode="open">
      <mg-input aria-labelledby="mg-input-radio-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <ul class="mg-c-input__input-group-container" role="list">
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_0" name="mg-input-radio" type="radio" value="0">
            <label htmlfor="mg-input-radio_0">
              batman
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_1" name="mg-input-radio" type="radio" value="1">
            <label htmlfor="mg-input-radio_1">
              robin
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_2" name="mg-input-radio" type="radio" value="2">
            <label htmlfor="mg-input-radio_2">
              joker
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_3" name="mg-input-radio" type="radio" value="3">
            <label htmlfor="mg-input-radio_3">
              bane
            </label>
          </li>
        </ul>
        <mg-input-title identifier="mg-input-radio" is-legend="true" readonly="false" required="false" slot="label">
          <!---->
          <legend class="mg-c-input-title" id="mg-input-radio-title">
            mg-input-radio label
          </legend>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-radio>
  <mg-input-text>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--display-character-left mg-c-input--text mg-c-input--width-full">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <div class="mg-c-input__input-group-container" style="--mg-c-character-left-message-length: 7;">
          <input aria-describedby="mg-input-text-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="mg-input-text" maxlength="400" name="mg-input-text" type="text">
          <mg-character-left identifier="mg-input-text-character-left" maxlength="400"></mg-character-left>
        </div>
        <slot name="append-input"></slot>
        <mg-input-title identifier="mg-input-text" is-legend="false" readonly="false" required="false" slot="label">
          <!---->
          <label class="mg-c-input-title" htmlfor="mg-input-text">
            mg-input-text label
          </label>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-text>
</mg-fieldset>
`;

exports[`mg-fieldset render Should render with args { legendHide: true }: 1`] = `
<mg-fieldset>
  <template shadowrootmode="open">
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset" role="group">
      <template shadowrootmode="open">
        <div class="mg-c-input__title mg-u-visually-hidden">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <span class="mg-c-input__input-group">
        <slot></slot>
      </span>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          legend
        </legend>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-input-radio>
    <template shadowrootmode="open">
      <mg-input aria-labelledby="mg-input-radio-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <ul class="mg-c-input__input-group-container" role="list">
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_0" name="mg-input-radio" type="radio" value="0">
            <label htmlfor="mg-input-radio_0">
              batman
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_1" name="mg-input-radio" type="radio" value="1">
            <label htmlfor="mg-input-radio_1">
              robin
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_2" name="mg-input-radio" type="radio" value="2">
            <label htmlfor="mg-input-radio_2">
              joker
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_3" name="mg-input-radio" type="radio" value="3">
            <label htmlfor="mg-input-radio_3">
              bane
            </label>
          </li>
        </ul>
        <mg-input-title identifier="mg-input-radio" is-legend="true" readonly="false" required="false" slot="label">
          <!---->
          <legend class="mg-c-input-title" id="mg-input-radio-title">
            mg-input-radio label
          </legend>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-radio>
  <mg-input-text>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--display-character-left mg-c-input--text mg-c-input--width-full">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <div class="mg-c-input__input-group-container" style="--mg-c-character-left-message-length: 7;">
          <input aria-describedby="mg-input-text-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="mg-input-text" maxlength="400" name="mg-input-text" type="text">
          <mg-character-left identifier="mg-input-text-character-left" maxlength="400"></mg-character-left>
        </div>
        <slot name="append-input"></slot>
        <mg-input-title identifier="mg-input-text" is-legend="false" readonly="false" required="false" slot="label">
          <!---->
          <label class="mg-c-input-title" htmlfor="mg-input-text">
            mg-input-text label
          </label>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-text>
</mg-fieldset>
`;

exports[`mg-fieldset render Should render with args { legendOnTop: true }: 1`] = `
<mg-fieldset legendontop="">
  <template shadowrootmode="open">
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--label-on-top" role="group">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <span class="mg-c-input__input-group">
        <slot></slot>
      </span>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          legend
        </legend>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-input-radio>
    <template shadowrootmode="open">
      <mg-input aria-labelledby="mg-input-radio-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <ul class="mg-c-input__input-group-container" role="list">
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_0" name="mg-input-radio" type="radio" value="0">
            <label htmlfor="mg-input-radio_0">
              batman
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_1" name="mg-input-radio" type="radio" value="1">
            <label htmlfor="mg-input-radio_1">
              robin
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_2" name="mg-input-radio" type="radio" value="2">
            <label htmlfor="mg-input-radio_2">
              joker
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_3" name="mg-input-radio" type="radio" value="3">
            <label htmlfor="mg-input-radio_3">
              bane
            </label>
          </li>
        </ul>
        <mg-input-title identifier="mg-input-radio" is-legend="true" readonly="false" required="false" slot="label">
          <!---->
          <legend class="mg-c-input-title" id="mg-input-radio-title">
            mg-input-radio label
          </legend>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-radio>
  <mg-input-text>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--display-character-left mg-c-input--text mg-c-input--width-full">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <div class="mg-c-input__input-group-container" style="--mg-c-character-left-message-length: 7;">
          <input aria-describedby="mg-input-text-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="mg-input-text" maxlength="400" name="mg-input-text" type="text">
          <mg-character-left identifier="mg-input-text-character-left" maxlength="400"></mg-character-left>
        </div>
        <slot name="append-input"></slot>
        <mg-input-title identifier="mg-input-text" is-legend="false" readonly="false" required="false" slot="label">
          <!---->
          <label class="mg-c-input-title" htmlfor="mg-input-text">
            mg-input-text label
          </label>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-text>
</mg-fieldset>
`;

exports[`mg-fieldset render Should render with args { readonly: true }: 1`] = `
<mg-fieldset>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--fieldset mg-c-input--label-on-top mg-c-input--readonly">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <span class="mg-c-input__input-group">
        <slot></slot>
      </span>
      <mg-input-title identifier="identifier" is-legend="true" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" id="identifier-title">
          legend
        </span>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-input-radio>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--fieldset mg-c-input--radio mg-c-input--readonly">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <mg-input-title identifier="mg-input-radio" is-legend="true" readonly="true" required="false" slot="label">
          <!---->
          <span class="mg-c-input-title" id="mg-input-radio-title">
            mg-input-radio label
          </span>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-radio>
  <mg-input-text>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--display-character-left mg-c-input--readonly mg-c-input--text mg-c-input--width-full">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <mg-input-title identifier="mg-input-text" is-legend="false" readonly="true" required="false" slot="label">
          <!---->
          <span class="mg-c-input-title" htmlfor="mg-input-text">
            mg-input-text label
          </span>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-text>
</mg-fieldset>
`;

exports[`mg-fieldset render Should render with args { tooltip: 'My Tooltip Message' }: 1`] = `
<mg-fieldset>
  <template shadowrootmode="open">
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--label-on-top" role="group">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <span class="mg-c-input__input-group">
        <slot></slot>
      </span>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          legend
        </legend>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-input-radio>
    <template shadowrootmode="open">
      <mg-input aria-labelledby="mg-input-radio-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <ul class="mg-c-input__input-group-container" role="list">
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_0" name="mg-input-radio" type="radio" value="0">
            <label htmlfor="mg-input-radio_0">
              batman
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_1" name="mg-input-radio" type="radio" value="1">
            <label htmlfor="mg-input-radio_1">
              robin
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_2" name="mg-input-radio" type="radio" value="2">
            <label htmlfor="mg-input-radio_2">
              joker
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_3" name="mg-input-radio" type="radio" value="3">
            <label htmlfor="mg-input-radio_3">
              bane
            </label>
          </li>
        </ul>
        <mg-input-title identifier="mg-input-radio" is-legend="true" readonly="false" required="false" slot="label">
          <!---->
          <legend class="mg-c-input-title" id="mg-input-radio-title">
            mg-input-radio label
          </legend>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-radio>
  <mg-input-text>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--display-character-left mg-c-input--text mg-c-input--width-full">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <div class="mg-c-input__input-group-container" style="--mg-c-character-left-message-length: 7;">
          <input aria-describedby="mg-input-text-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="mg-input-text" maxlength="400" name="mg-input-text" type="text">
          <mg-character-left identifier="mg-input-text-character-left" maxlength="400"></mg-character-left>
        </div>
        <slot name="append-input"></slot>
        <mg-input-title identifier="mg-input-text" is-legend="false" readonly="false" required="false" slot="label">
          <!---->
          <label class="mg-c-input-title" htmlfor="mg-input-text">
            mg-input-text label
          </label>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-text>
</mg-fieldset>
`;

exports[`mg-fieldset render Should render with args {}: 1`] = `
<mg-fieldset>
  <template shadowrootmode="open">
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--label-on-top" role="group">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <span class="mg-c-input__input-group">
        <slot></slot>
      </span>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          legend
        </legend>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-input-radio>
    <template shadowrootmode="open">
      <mg-input aria-labelledby="mg-input-radio-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <ul class="mg-c-input__input-group-container" role="list">
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_0" name="mg-input-radio" type="radio" value="0">
            <label htmlfor="mg-input-radio_0">
              batman
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_1" name="mg-input-radio" type="radio" value="1">
            <label htmlfor="mg-input-radio_1">
              robin
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_2" name="mg-input-radio" type="radio" value="2">
            <label htmlfor="mg-input-radio_2">
              joker
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_3" name="mg-input-radio" type="radio" value="3">
            <label htmlfor="mg-input-radio_3">
              bane
            </label>
          </li>
        </ul>
        <mg-input-title identifier="mg-input-radio" is-legend="true" readonly="false" required="false" slot="label">
          <!---->
          <legend class="mg-c-input-title" id="mg-input-radio-title">
            mg-input-radio label
          </legend>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-radio>
  <mg-input-text>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--display-character-left mg-c-input--text mg-c-input--width-full">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <div class="mg-c-input__input-group-container" style="--mg-c-character-left-message-length: 7;">
          <input aria-describedby="mg-input-text-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="mg-input-text" maxlength="400" name="mg-input-text" type="text">
          <mg-character-left identifier="mg-input-text-character-left" maxlength="400"></mg-character-left>
        </div>
        <slot name="append-input"></slot>
        <mg-input-title identifier="mg-input-text" is-legend="false" readonly="false" required="false" slot="label">
          <!---->
          <label class="mg-c-input-title" htmlfor="mg-input-text">
            mg-input-text label
          </label>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-text>
</mg-fieldset>
`;

exports[`mg-fieldset validity Should display components errors (readonly: false) 1`] = `
<mg-fieldset>
  <template shadowrootmode="open">
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--label-on-top" role="group">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <span class="mg-c-input__input-group">
        <slot></slot>
      </span>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          legend
        </legend>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-input-radio>
    <template shadowrootmode="open">
      <mg-input aria-labelledby="mg-input-radio-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-error mg-c-input--radio" role="group">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
            <div aria-live="assertive" class="mg-c-input__error">
              <slot name="error"></slot>
            </div>
          </div>
        </template>
        <ul class="mg-c-input__input-group-container" role="list">
          <li class="mg-c-input__input-group">
            <input aria-describedby="mg-input-radio-error" id="mg-input-radio_0" name="mg-input-radio" required="" type="radio" value="0">
            <label htmlfor="mg-input-radio_0">
              batman
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input aria-describedby="mg-input-radio-error" id="mg-input-radio_1" name="mg-input-radio" required="" type="radio" value="1">
            <label htmlfor="mg-input-radio_1">
              robin
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input aria-describedby="mg-input-radio-error" id="mg-input-radio_2" name="mg-input-radio" required="" type="radio" value="2">
            <label htmlfor="mg-input-radio_2">
              joker
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input aria-describedby="mg-input-radio-error" id="mg-input-radio_3" name="mg-input-radio" required="" type="radio" value="3">
            <label htmlfor="mg-input-radio_3">
              bane
            </label>
          </li>
        </ul>
        <div id="mg-input-radio-error" slot="error">
          This field is required.
        </div>
        <mg-input-title identifier="mg-input-radio" is-legend="true" readonly="false" required="true" slot="label">
          <!---->
          <legend class="mg-c-input-title" id="mg-input-radio-title">
            mg-input-radio label
            <span class="mg-c-input-title__required">
              <span class="mg-u-is-asterisk">
                *
              </span>
            </span>
          </legend>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-radio>
  <mg-input-text>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--display-character-left mg-c-input--has-error mg-c-input--text mg-c-input--width-full">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
            <div aria-live="assertive" class="mg-c-input__error">
              <slot name="error"></slot>
            </div>
          </div>
        </template>
        <div class="mg-c-input__input-group-container" style="--mg-c-character-left-message-length: 7;">
          <input aria-describedby="mg-input-text-character-left mg-input-text-error" aria-invalid="true" class="mg-c-input__box mg-c-input__box--width" id="mg-input-text" maxlength="400" name="mg-input-text" required="" type="text">
          <mg-character-left identifier="mg-input-text-character-left" maxlength="400"></mg-character-left>
        </div>
        <slot name="append-input"></slot>
        <div id="mg-input-text-error" slot="error">
          This field is required.
        </div>
        <mg-input-title identifier="mg-input-text" is-legend="false" readonly="false" required="true" slot="label">
          <!---->
          <label class="mg-c-input-title" htmlfor="mg-input-text">
            mg-input-text label
            <span class="mg-c-input-title__required">
              <span class="mg-u-is-asterisk">
                *
              </span>
            </span>
          </label>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-text>
</mg-fieldset>
`;

exports[`mg-fieldset validity Should display components errors (readonly: true) 1`] = `
<mg-fieldset>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--fieldset mg-c-input--label-on-top mg-c-input--readonly">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <span class="mg-c-input__input-group">
        <slot></slot>
      </span>
      <mg-input-title identifier="identifier" is-legend="true" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" id="identifier-title">
          legend
        </span>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-input-radio>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--fieldset mg-c-input--radio mg-c-input--readonly">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <mg-input-title identifier="mg-input-radio" is-legend="true" readonly="true" required="true" slot="label">
          <!---->
          <span class="mg-c-input-title" id="mg-input-radio-title">
            mg-input-radio label
          </span>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-radio>
  <mg-input-text>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--display-character-left mg-c-input--readonly mg-c-input--text mg-c-input--width-full">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <mg-input-title identifier="mg-input-text" is-legend="false" readonly="true" required="true" slot="label">
          <!---->
          <span class="mg-c-input-title" htmlfor="mg-input-text">
            mg-input-text label
          </span>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-text>
</mg-fieldset>
`;

exports[`mg-fieldset validity Should set custom validity (readonly: false) 1`] = `
<mg-fieldset>
  <template shadowrootmode="open">
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-error mg-c-input--label-on-top" role="group">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <span class="mg-c-input__input-group">
        <slot></slot>
      </span>
      <div id="identifier-error" slot="error">
        this is a custom error
      </div>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend aria-describedby="identifier-error" class="mg-c-input-title" id="identifier-title">
          legend
        </legend>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-input-radio>
    <template shadowrootmode="open">
      <mg-input aria-labelledby="mg-input-radio-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <ul class="mg-c-input__input-group-container" role="list">
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_0" name="mg-input-radio" type="radio" value="0">
            <label htmlfor="mg-input-radio_0">
              batman
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_1" name="mg-input-radio" type="radio" value="1">
            <label htmlfor="mg-input-radio_1">
              robin
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_2" name="mg-input-radio" type="radio" value="2">
            <label htmlfor="mg-input-radio_2">
              joker
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_3" name="mg-input-radio" type="radio" value="3">
            <label htmlfor="mg-input-radio_3">
              bane
            </label>
          </li>
        </ul>
        <mg-input-title identifier="mg-input-radio" is-legend="true" readonly="false" required="false" slot="label">
          <!---->
          <legend class="mg-c-input-title" id="mg-input-radio-title">
            mg-input-radio label
          </legend>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-radio>
  <mg-input-text>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--display-character-left mg-c-input--text mg-c-input--width-full">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <div class="mg-c-input__input-group-container" style="--mg-c-character-left-message-length: 7;">
          <input aria-describedby="mg-input-text-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="mg-input-text" maxlength="400" name="mg-input-text" type="text">
          <mg-character-left identifier="mg-input-text-character-left" maxlength="400"></mg-character-left>
        </div>
        <slot name="append-input"></slot>
        <mg-input-title identifier="mg-input-text" is-legend="false" readonly="false" required="false" slot="label">
          <!---->
          <label class="mg-c-input-title" htmlfor="mg-input-text">
            mg-input-text label
          </label>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-text>
</mg-fieldset>
`;

exports[`mg-fieldset validity Should set custom validity (readonly: false) 2`] = `
<mg-fieldset>
  <template shadowrootmode="open">
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--label-on-top" role="group">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <span class="mg-c-input__input-group">
        <slot></slot>
      </span>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          legend
        </legend>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-input-radio>
    <template shadowrootmode="open">
      <mg-input aria-labelledby="mg-input-radio-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <ul class="mg-c-input__input-group-container" role="list">
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_0" name="mg-input-radio" type="radio" value="0">
            <label htmlfor="mg-input-radio_0">
              batman
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_1" name="mg-input-radio" type="radio" value="1">
            <label htmlfor="mg-input-radio_1">
              robin
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_2" name="mg-input-radio" type="radio" value="2">
            <label htmlfor="mg-input-radio_2">
              joker
            </label>
          </li>
          <li class="mg-c-input__input-group">
            <input id="mg-input-radio_3" name="mg-input-radio" type="radio" value="3">
            <label htmlfor="mg-input-radio_3">
              bane
            </label>
          </li>
        </ul>
        <mg-input-title identifier="mg-input-radio" is-legend="true" readonly="false" required="false" slot="label">
          <!---->
          <legend class="mg-c-input-title" id="mg-input-radio-title">
            mg-input-radio label
          </legend>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-radio>
  <mg-input-text>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--display-character-left mg-c-input--text mg-c-input--width-full">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <div class="mg-c-input__input-group-container" style="--mg-c-character-left-message-length: 7;">
          <input aria-describedby="mg-input-text-character-left" aria-invalid="false" class="mg-c-input__box mg-c-input__box--width" id="mg-input-text" maxlength="400" name="mg-input-text" type="text">
          <mg-character-left identifier="mg-input-text-character-left" maxlength="400"></mg-character-left>
        </div>
        <slot name="append-input"></slot>
        <mg-input-title identifier="mg-input-text" is-legend="false" readonly="false" required="false" slot="label">
          <!---->
          <label class="mg-c-input-title" htmlfor="mg-input-text">
            mg-input-text label
          </label>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-text>
</mg-fieldset>
`;

exports[`mg-fieldset validity Should set custom validity (readonly: true) 1`] = `
<mg-fieldset>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--fieldset mg-c-input--has-error mg-c-input--label-on-top mg-c-input--readonly">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </template>
      <span class="mg-c-input__input-group">
        <slot></slot>
      </span>
      <mg-input-title identifier="identifier" is-legend="true" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" id="identifier-title">
          legend
        </span>
      </mg-input-title>
      <div id="identifier-error" slot="error">
        this is a custom error
      </div>
    </mg-input>
  </template>
  <mg-input-radio>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--fieldset mg-c-input--radio mg-c-input--readonly">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <mg-input-title identifier="mg-input-radio" is-legend="true" readonly="true" required="false" slot="label">
          <!---->
          <span class="mg-c-input-title" id="mg-input-radio-title">
            mg-input-radio label
          </span>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-radio>
  <mg-input-text>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--display-character-left mg-c-input--readonly mg-c-input--text mg-c-input--width-full">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <mg-input-title identifier="mg-input-text" is-legend="false" readonly="true" required="false" slot="label">
          <!---->
          <span class="mg-c-input-title" htmlfor="mg-input-text">
            mg-input-text label
          </span>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-text>
</mg-fieldset>
`;

exports[`mg-fieldset validity Should set custom validity (readonly: true) 2`] = `
<mg-fieldset>
  <template shadowrootmode="open">
    <mg-input class="mg-c-input mg-c-input--fieldset mg-c-input--label-on-top mg-c-input--readonly">
      <template shadowrootmode="open">
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </template>
      <span class="mg-c-input__input-group">
        <slot></slot>
      </span>
      <mg-input-title identifier="identifier" is-legend="true" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" id="identifier-title">
          legend
        </span>
      </mg-input-title>
    </mg-input>
  </template>
  <mg-input-radio>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--fieldset mg-c-input--radio mg-c-input--readonly">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <mg-input-title identifier="mg-input-radio" is-legend="true" readonly="true" required="false" slot="label">
          <!---->
          <span class="mg-c-input-title" id="mg-input-radio-title">
            mg-input-radio label
          </span>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-radio>
  <mg-input-text>
    <template shadowrootmode="open">
      <mg-input class="mg-c-input mg-c-input--display-character-left mg-c-input--readonly mg-c-input--text mg-c-input--width-full">
        <template shadowrootmode="open">
          <div class="mg-c-input__title">
            <slot name="label"></slot>
          </div>
          <div class="mg-c-input__input-container">
            <div class="mg-c-input__input">
              <slot></slot>
            </div>
          </div>
        </template>
        <mg-input-title identifier="mg-input-text" is-legend="false" readonly="true" required="false" slot="label">
          <!---->
          <span class="mg-c-input-title" htmlfor="mg-input-text">
            mg-input-text label
          </span>
        </mg-input-title>
      </mg-input>
    </template>
  </mg-input-text>
</mg-fieldset>
`;
